crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__definitions_tests__multiple_named_defs.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/definitions_tests.rs
---
Expr = (expression)
Stmt = (statement)
---
Root
  Def
    Id "Expr"
    Equals "="
    Tree
      ParenOpen "("
      Id "expression"
      ParenClose ")"
  Def
    Id "Stmt"
    Equals "="
    Tree
      ParenOpen "("
      Id "statement"
      ParenClose ")"
