crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__definitions_tests__named_def_complex_recursive.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/definitions_tests.rs
---
NestedCall = (call_expression
    function: [(identifier) @name (NestedCall) @inner]
    arguments: (arguments))
---
Root
  Def
    Id "NestedCall"
    Equals "="
    Tree
      ParenOpen "("
      Id "call_expression"
      Field
        Id "function"
        Colon ":"
        Alt
          BracketOpen "["
          Branch
            Capture
              Tree
                ParenOpen "("
                Id "identifier"
                ParenClose ")"
              CaptureToken "@name"
          Branch
            Capture
              Ref
                ParenOpen "("
                Id "NestedCall"
                ParenClose ")"
              CaptureToken "@inner"
          BracketClose "]"
      Field
        Id "arguments"
        Colon ":"
        Tree
          ParenOpen "("
          Id "arguments"
          ParenClose ")"
      ParenClose ")"
