crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__definitions_tests__named_def_with_alternation.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/definitions_tests.rs
---
Value = [(identifier) (number) (string)]
---
Root
  Def
    Id "Value"
    Equals "="
    Alt
      BracketOpen "["
      Branch
        Tree
          ParenOpen "("
          Id "identifier"
          ParenClose ")"
      Branch
        Tree
          ParenOpen "("
          Id "number"
          ParenClose ")"
      Branch
        Tree
          ParenOpen "("
          Id "string"
          ParenClose ")"
      BracketClose "]"
