crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__definitions_tests__named_def_with_quantifier.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/definitions_tests.rs
---
Statements = (statement)+
---
Root
  Def
    Id "Statements"
    Equals "="
    Quantifier
      Tree
        ParenOpen "("
        Id "statement"
        ParenClose ")"
      Plus "+"
