crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__definitions_tests__named_def_with_sequence.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/definitions_tests.rs
---
Pair = {(identifier) (expression)}
---
Root
  Def
    Id "Pair"
    Equals "="
    Seq
      BraceOpen "{"
      Tree
        ParenOpen "("
        Id "identifier"
        ParenClose ")"
      Tree
        ParenOpen "("
        Id "expression"
        ParenClose ")"
      BraceClose "}"
