crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__definitions_tests__named_def_with_type_annotation.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/definitions_tests.rs
---
Func = (function_declaration
    name: (identifier) @name :: string
    body: (_) @body)
---
Root
  Def
    Id "Func"
    Equals "="
    Tree
      ParenOpen "("
      Id "function_declaration"
      Capture
        Field
          Id "name"
          Colon ":"
          Tree
            ParenOpen "("
            Id "identifier"
            ParenClose ")"
        CaptureToken "@name"
        Type
          DoubleColon "::"
          Id "string"
      Capture
        Field
          Id "body"
          Colon ":"
          Tree
            ParenOpen "("
            Underscore "_"
            ParenClose ")"
        CaptureToken "@body"
      ParenClose ")"
