crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__definitions_tests__simple_named_def.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/definitions_tests.rs
---
Expr = (identifier)
---
Root
  Def
    Id "Expr"
    Equals "="
    Tree
      ParenOpen "("
      Id "identifier"
      ParenClose ")"
